Added score method to predict with ml model
